--- a/property-insurance-ui/src/styles.css
+++ b/property-insurance-ui/src/styles.css
@@ -1,3 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import 'tailwindcss';
+
+/* Enable class-based dark mode (add/remove .dark on <html>) */
+@custom-variant dark (&:where(.dark, .dark *));
